Testcases/pos/test14.jl
# empty while
function main()
    while false
    end
end

main()


