Testcases/neg/test00.jl
# unterminated comment
function main()
#=

=  #
end
main()
